public/css/desktop.css
body {
	font-family: 'Quicksand', sans-serif;
	font-size:14pt;
	margin:auto;
	width:720pt;
}

h2 {
	font-size: 20pt;
	font-weight:bold;
	text-transform:uppercase;
}

.clearAll {
	clear:both;
}

input[type=text] {
	font-size:20pt;
	border: 2pt solid #ccc;
	border-radius: 6pt;
}

input[type=text]:focus {
	border: 2pt solid #555;
	outline:none;
}

form[name=searchTerms] > div {
	float:left;
}

#searchBtn {
	font-size:20px;
	text-transform: uppercase;
	padding-top: 5pt;
	padding-bottom: 5pt;
	color:white;
	background: -webkit-linear-gradient(#555, #999, #555);
	background: -moz-linear-gradient(top, #555, #999, #555);
	border: 2.5pt solid #ccc;
	border-radius: 6pt;
	box-shadow: 5pt 5pt 10pt #aaa;
}

label {
	text-transform:uppercase;
	font-size:8pt;
	font-weight:bold;
	color:#555;
	margin-right:8pt;
}

#controlRightHalf {
	float:left;
	width: 200pt;
	border-left:1px solid #ccc;
	padding-left:10pt;
	margin-left:10pt;
	margin-bottom:5pt;
}

#sortBy br {
	line-height:110%;
}

#sortPrefs label {
	float: none;
}

#sortPrefs legend {
	text-transform:uppercase;
	font-size:8pt;
	font-weight:bold;
	color:#555;
	margin-right:8pt;
}

#sortPrefs fieldset label {
	color:#ccc;
}

#sortPrefs fieldset {
	border:none;
}

#navigationSection {
	float:left;
	width: 75pt;
}

.navCaption {
	font-size:10pt;
	text-transform: uppercase;
	font-weight:bold;
	color:#555;
}

.nav button {
	font-size:15pt;
	color: #555;
	font-weight:bold;
	text-transform:uppercase;
	padding:5pt;
	background-color:white;
	border-radius:6pt;
	border: 2.5pt solid #ccc;
	width: 55pt;
	height: 30pt;
	margin-bottom: 5pt;
}

.etcNav button {
	font-size:11pt;
}

.mainContent {
	float:left;
	width: 600pt;
	border-left:1pt solid #ccc;
	padding-left:20pt;
}

#wordTable {
	-webkit-text-size-adjust:auto;
	width:100%;
}

#wordTable caption {
	text-align: left;
	font-size: 16pt;
	font-weight: bold;
	padding-top: 5pt;
	padding-bottom: 5pt;
}

#wordTable td {
	text-align: left;
	text-transform:lowercase;
	font-weight:bold;
}

#wordTable .groupRow {
	color: #888;
	text-align:left;
	text-transform:uppercase;
	font-size:8pt;
	font-weight:bold;
	border-bottom:2px solid #888;
	padding-top: 12pt;
	padding-bottom: 4pt;
}

.logos {
	margin-top:50pt;
	text-align:center;
}

.logos img {
	vertical-align:middle;
	text-align:center;
	height:60pt;
	margin-left:8pt;
	margin-right:8pt;
}

footer {
	margin-left:75pt;
	margin-top: 30pt;
	width:600pt;
	border-top:2px solid #ccc;
	text-align:right;
}

footer, footer a, footer a:link, footer a:visited {
	font-size: 8pt;
	font-weight: bold;
	color: #888;
	text-transform:uppercase;
	font-weight:bold;
	text-decoration:none;
}

footer a:hover {
	text-decoration:underline;
}

.error {
	color:#f55;
}

